@@ -1657,6 +1657,424 @@ argument_list|()
 expr_stmt|;
 comment|// final cleanup
 block|}
+comment|/**    * Merges all segments from an array of indexes into this index.    *<p>    * This is similar to addIndexes(Directory[]). However, no optimize()    * is called either at the beginning or at the end. Instead, merges    * are carried out as necessary.    *<p>    * This requires this index not be among those to be added, and the    * upper bound* of those segment doc counts not exceed maxMergeDocs.    */
+DECL|method|addIndexesNoOptimize
+specifier|public
+specifier|synchronized
+name|void
+name|addIndexesNoOptimize
+parameter_list|(
+name|Directory
+index|[]
+name|dirs
+parameter_list|)
+throws|throws
+name|IOException
+block|{
+comment|// Adding indexes can be viewed as adding a sequence of segments S to
+comment|// a sequence of segments T. Segments in T follow the invariants but
+comment|// segments in S may not since they could come from multiple indexes.
+comment|// Here is the merge algorithm for addIndexesNoOptimize():
+comment|//
+comment|// 1 Flush ram segments.
+comment|// 2 Consider a combined sequence with segments from T followed
+comment|//   by segments from S (same as current addIndexes(Directory[])).
+comment|// 3 Assume the highest level for segments in S is h. Call
+comment|//   maybeMergeSegments(), but instead of starting w/ lowerBound = -1
+comment|//   and upperBound = maxBufferedDocs, start w/ lowerBound = -1 and
+comment|//   upperBound = upperBound of level h. After this, the invariants
+comment|//   are guaranteed except for the last< M segments whose levels<= h.
+comment|// 4 If the invariants hold for the last< M segments whose levels<= h,
+comment|//   if some of those< M segments are from S (not merged in step 3),
+comment|//   properly copy them over*, otherwise done.
+comment|//   Otherwise, simply merge those segments. If the merge results in
+comment|//   a segment of level<= h, done. Otherwise, it's of level h+1 and call
+comment|//   maybeMergeSegments() starting w/ upperBound = upperBound of level h+1.
+comment|//
+comment|// * Ideally, we want to simply copy a segment. However, directory does
+comment|// not support copy yet. In addition, source may use compound file or not
+comment|// and target may use compound file or not. So we use mergeSegments() to
+comment|// copy a segment, which may cause doc count to change because deleted
+comment|// docs are garbage collected.
+comment|//
+comment|// In current addIndexes(Directory[]), segment infos in S are added to
+comment|// T's "segmentInfos" upfront. Then segments in S are merged to T several
+comment|// at a time. Every merge is committed with T's "segmentInfos". So if
+comment|// a reader is opened on T while addIndexes() is going on, it could see
+comment|// an inconsistent index. AddIndexesNoOptimize() has a similar behaviour.
+comment|// 1 flush ram segments
+name|flushRamSegments
+argument_list|()
+expr_stmt|;
+comment|// 2 copy segment infos and find the highest level from dirs
+name|int
+name|start
+init|=
+name|segmentInfos
+operator|.
+name|size
+argument_list|()
+decl_stmt|;
+name|int
+name|startUpperBound
+init|=
+name|minMergeDocs
+decl_stmt|;
+try|try
+block|{
+for|for
+control|(
+name|int
+name|i
+init|=
+literal|0
+init|;
+name|i
+operator|<
+name|dirs
+operator|.
+name|length
+condition|;
+name|i
+operator|++
+control|)
+block|{
+if|if
+condition|(
+name|directory
+operator|==
+name|dirs
+index|[
+name|i
+index|]
+condition|)
+block|{
+comment|// cannot add this index: segments may be deleted in merge before added
+throw|throw
+operator|new
+name|IllegalArgumentException
+argument_list|(
+literal|"Cannot add this index to itself"
+argument_list|)
+throw|;
+block|}
+name|SegmentInfos
+name|sis
+init|=
+operator|new
+name|SegmentInfos
+argument_list|()
+decl_stmt|;
+comment|// read infos from dir
+name|sis
+operator|.
+name|read
+argument_list|(
+name|dirs
+index|[
+name|i
+index|]
+argument_list|)
+expr_stmt|;
+for|for
+control|(
+name|int
+name|j
+init|=
+literal|0
+init|;
+name|j
+operator|<
+name|sis
+operator|.
+name|size
+argument_list|()
+condition|;
+name|j
+operator|++
+control|)
+block|{
+name|SegmentInfo
+name|info
+init|=
+name|sis
+operator|.
+name|info
+argument_list|(
+name|j
+argument_list|)
+decl_stmt|;
+name|segmentInfos
+operator|.
+name|addElement
+argument_list|(
+name|info
+argument_list|)
+expr_stmt|;
+comment|// add each info
+while|while
+condition|(
+name|startUpperBound
+operator|<
+name|info
+operator|.
+name|docCount
+condition|)
+block|{
+name|startUpperBound
+operator|*=
+name|mergeFactor
+expr_stmt|;
+comment|// find the highest level from dirs
+if|if
+condition|(
+name|startUpperBound
+operator|>
+name|maxMergeDocs
+condition|)
+block|{
+comment|// upper bound cannot exceed maxMergeDocs
+throw|throw
+operator|new
+name|IllegalArgumentException
+argument_list|(
+literal|"Upper bound cannot exceed maxMergeDocs"
+argument_list|)
+throw|;
+block|}
+block|}
+block|}
+block|}
+block|}
+catch|catch
+parameter_list|(
+name|IllegalArgumentException
+name|e
+parameter_list|)
+block|{
+for|for
+control|(
+name|int
+name|i
+init|=
+name|segmentInfos
+operator|.
+name|size
+argument_list|()
+operator|-
+literal|1
+init|;
+name|i
+operator|>=
+name|start
+condition|;
+name|i
+operator|--
+control|)
+block|{
+name|segmentInfos
+operator|.
+name|remove
+argument_list|(
+name|i
+argument_list|)
+expr_stmt|;
+block|}
+throw|throw
+name|e
+throw|;
+block|}
+comment|// 3 maybe merge segments starting from the highest level from dirs
+name|maybeMergeSegments
+argument_list|(
+name|startUpperBound
+argument_list|)
+expr_stmt|;
+comment|// get the tail segments whose levels<= h
+name|int
+name|segmentCount
+init|=
+name|segmentInfos
+operator|.
+name|size
+argument_list|()
+decl_stmt|;
+name|int
+name|numTailSegments
+init|=
+literal|0
+decl_stmt|;
+while|while
+condition|(
+name|numTailSegments
+operator|<
+name|segmentCount
+operator|&&
+name|startUpperBound
+operator|>=
+name|segmentInfos
+operator|.
+name|info
+argument_list|(
+name|segmentCount
+operator|-
+literal|1
+operator|-
+name|numTailSegments
+argument_list|)
+operator|.
+name|docCount
+condition|)
+block|{
+name|numTailSegments
+operator|++
+expr_stmt|;
+block|}
+if|if
+condition|(
+name|numTailSegments
+operator|==
+literal|0
+condition|)
+block|{
+return|return;
+block|}
+comment|// 4 make sure invariants hold for the tail segments whose levels<= h
+if|if
+condition|(
+name|checkNonDecreasingLevels
+argument_list|(
+name|segmentCount
+operator|-
+name|numTailSegments
+argument_list|)
+condition|)
+block|{
+comment|// identify the segments from S to be copied (not merged in 3)
+name|int
+name|numSegmentsToCopy
+init|=
+literal|0
+decl_stmt|;
+while|while
+condition|(
+name|numSegmentsToCopy
+operator|<
+name|segmentCount
+operator|&&
+name|directory
+operator|!=
+name|segmentInfos
+operator|.
+name|info
+argument_list|(
+name|segmentCount
+operator|-
+literal|1
+operator|-
+name|numSegmentsToCopy
+argument_list|)
+operator|.
+name|dir
+condition|)
+block|{
+name|numSegmentsToCopy
+operator|++
+expr_stmt|;
+block|}
+if|if
+condition|(
+name|numSegmentsToCopy
+operator|==
+literal|0
+condition|)
+block|{
+return|return;
+block|}
+comment|// copy those segments from S
+for|for
+control|(
+name|int
+name|i
+init|=
+name|segmentCount
+operator|-
+name|numSegmentsToCopy
+init|;
+name|i
+operator|<
+name|segmentCount
+condition|;
+name|i
+operator|++
+control|)
+block|{
+name|mergeSegments
+argument_list|(
+name|segmentInfos
+argument_list|,
+name|i
+argument_list|,
+name|i
+operator|+
+literal|1
+argument_list|)
+expr_stmt|;
+block|}
+if|if
+condition|(
+name|checkNonDecreasingLevels
+argument_list|(
+name|segmentCount
+operator|-
+name|numSegmentsToCopy
+argument_list|)
+condition|)
+block|{
+return|return;
+block|}
+block|}
+comment|// invariants do not hold, simply merge those segments
+name|mergeSegments
+argument_list|(
+name|segmentInfos
+argument_list|,
+name|segmentCount
+operator|-
+name|numTailSegments
+argument_list|,
+name|segmentCount
+argument_list|)
+expr_stmt|;
+comment|// maybe merge segments again if necessary
+if|if
+condition|(
+name|segmentInfos
+operator|.
+name|info
+argument_list|(
+name|segmentInfos
+operator|.
+name|size
+argument_list|()
+operator|-
+literal|1
+argument_list|)
+operator|.
+name|docCount
+operator|>
+name|startUpperBound
+condition|)
+block|{
+name|maybeMergeSegments
+argument_list|(
+name|startUpperBound
+operator|*
+name|mergeFactor
+argument_list|)
+expr_stmt|;
+block|}
+block|}
 comment|/** Merges the provided indexes into this index.    *<p>After this completes, the index is optimized.</p>    *<p>The provided IndexReaders are not closed.</p>    */
 DECL|method|addIndexes
 specifier|public
@@ -2037,7 +2455,9 @@ argument_list|()
 argument_list|)
 expr_stmt|;
 name|maybeMergeSegments
-argument_list|()
+argument_list|(
+name|minMergeDocs
+argument_list|)
 expr_stmt|;
 block|}
 block|}
@@ -2047,7 +2467,10 @@ specifier|private
 specifier|final
 name|void
 name|maybeMergeSegments
-parameter_list|()
+parameter_list|(
+name|int
+name|startUpperBound
+parameter_list|)
 throws|throws
 name|IOException
 block|{
@@ -2060,14 +2483,12 @@ decl_stmt|;
 name|long
 name|upperBound
 init|=
-name|minMergeDocs
+name|startUpperBound
 decl_stmt|;
 while|while
 condition|(
 name|upperBound
-operator|*
-name|mergeFactor
-operator|<=
+operator|<
 name|maxMergeDocs
 condition|)
 block|{
@@ -3116,6 +3537,91 @@ operator|.
 name|DELETABLE
 argument_list|)
 expr_stmt|;
+block|}
+DECL|method|checkNonDecreasingLevels
+specifier|private
+specifier|final
+name|boolean
+name|checkNonDecreasingLevels
+parameter_list|(
+name|int
+name|start
+parameter_list|)
+block|{
+name|int
+name|lowerBound
+init|=
+operator|-
+literal|1
+decl_stmt|;
+name|int
+name|upperBound
+init|=
+name|minMergeDocs
+decl_stmt|;
+for|for
+control|(
+name|int
+name|i
+init|=
+name|segmentInfos
+operator|.
+name|size
+argument_list|()
+operator|-
+literal|1
+init|;
+name|i
+operator|>=
+name|start
+condition|;
+name|i
+operator|--
+control|)
+block|{
+name|int
+name|docCount
+init|=
+name|segmentInfos
+operator|.
+name|info
+argument_list|(
+name|i
+argument_list|)
+operator|.
+name|docCount
+decl_stmt|;
+if|if
+condition|(
+name|docCount
+operator|<=
+name|lowerBound
+condition|)
+block|{
+return|return
+literal|false
+return|;
+block|}
+while|while
+condition|(
+name|docCount
+operator|>
+name|upperBound
+condition|)
+block|{
+name|lowerBound
+operator|=
+name|upperBound
+expr_stmt|;
+name|upperBound
+operator|*=
+name|mergeFactor
+expr_stmt|;
+block|}
+block|}
+return|return
+literal|true
+return|;
 block|}
 block|}
 end_class
